--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "wordpress-rest-api-oauth-1": "^1.0.8"
   },
   "scripts": {
