--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-timeago": "^3.1.3",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "wordpress-rest-api-oauth-1": "^1.0.8"
   },
