--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-router": "^4.0.0-alpha.5",
+    "react-router-addons-controlled": "0.0.1",
     "react-timeago": "^3.1.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
@@ -24,6 +26,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "watch-css": "./node_modules/node-sass/bin/node-sass -w --include-path src/scss --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/normalize-scss/sass/  src/scss/theme.scss public/main.css",
-    "css" : "./node_modules/node-sass/bin/node-sass --include-path src/scss --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/normalize-scss/sass/  src/scss/theme.scss public/main.css"
+    "css": "./node_modules/node-sass/bin/node-sass --include-path src/scss --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/normalize-scss/sass/  src/scss/theme.scss public/main.css"
   }
 }
