--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
     "flow-bin": "^0.44.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^0.9.5"
   },
   "dependencies": {
     "@humanmade/frontkit": "^0.3.0",
     "bourbon": "^4.2.7",
+    "draft-js-plugins-editor": "2.0.0-beta10",
     "node-sass": "^3.10.1",
     "normalize-scss": "^6.0.0",
     "react": "^15.3.2",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.3.2",
+    "react-infinite-scroll-component": "^2.2.2",
     "react-intl": "^2.2.3",
     "react-redux": "^4.4.5",
     "react-router": "^4.0.0-alpha.5",
@@ -32,6 +34,7 @@
     "watch-css": "npm run build-css && node-sass src/ -o src --watch",
     "start": "react-scripts start & npm run watch-css",
     "build": "npm run build-css && react-scripts build",
+    "deploy": "npm run build && aws s3 sync ./build s3://make.hmn.md/h2 --acl public-read",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "npm run watch-css & start-storybook -p 9009 -s public",
