--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
     "flow-bin": "^0.44.2",
-    "react-scripts": "^0.9.5"
+    "react-scripts": "^1.0.14"
   },
   "dependencies": {
     "@humanmade/frontkit": "^0.3.0",
@@ -32,7 +32,7 @@
   "scripts": {
     "build-css": "node-sass src/ -o src",
     "watch-css": "npm run build-css && node-sass src/ -o src --watch",
-    "start": "react-scripts start & npm run watch-css",
+    "start": "npm run watch-css & react-scripts start",
     "build": "npm run build-css && react-scripts build",
     "deploy": "npm run build && aws s3 sync ./build s3://make.hmn.md/h2 --acl public-read",
     "test": "react-scripts test --env=jsdom",
