--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "draft-js-plugins-editor": "2.0.0-beta10",
     "node-sass": "^3.10.1",
     "normalize-scss": "^6.0.0",
+    "prop-types": "^15.6.0",
     "react": "^15.3.2",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.3.2",
-    "react-infinite-scroll-component": "^2.2.2",
+    "react-infinite-scroll-component": "^2.4.0",
     "react-intl": "^2.2.3",
     "react-redux": "^4.4.5",
     "react-router": "^4.0.0-alpha.5",
