Remove watch-css from storybook

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "deploy": "npm run build && aws s3 sync ./build s3://make.hmn.md/h2 --acl public-read",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "storybook": "npm run watch-css & start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   }
 }
