--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "bourbon": "^4.2.7",
     "draft-js-plugins-editor": "2.0.0-beta10",
     "prop-types": "^15.6.0",
-    "react": "^15.3.2",
+    "react": "^16.0.0",
     "react-document-title": "^2.0.2",
-    "react-dom": "^15.3.2",
+    "react-dom": "^16.0.0",
     "react-infinite-scroll-component": "^2.4.0",
-    "react-intl": "^2.2.3",
+    "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.0.0-alpha.5",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-storybook": "^1.0.0",
-    "react-timeago": "^3.1.3",
+    "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.2.0",
