--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/hm-pattern-library"]
 	path = src/hm-pattern-library
 	url = https://github.com/humanmade/hm-pattern-library
+[submodule "src/lib/wordpress-rest-api-oauth-2"]
+	path = src/lib/wordpress-rest-api-oauth-2
+	url = git@github.com:rmccue/wordpress-rest-api-oauth-2.git
