--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^2.7.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "wordpress-rest-api-oauth-2": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
