--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@iarna/word-count": "^1.0.3",
     "emoji-mart": "^2.1.1",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "postcss-loader": "^2.0.8",
     "prop-types": "^15.6.0",
