--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-slot-fill": "^2.0.0",
     "react-storybook": "^1.0.0",
     "react-timeago": "^3.4.3",
     "react-transition-group": "^2.2.1",
