--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^1.1.0"
   },
   "dependencies": {
+    "@humanmade/react-tasklist": "^0.0.4",
     "@iarna/word-count": "^1.0.3",
     "emoji-mart": "^2.5.0",
     "interweave": "^8.1.0",
