--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.2.0",
-    "textarea-caret": "^3.0.2"
+    "textarea-caret": "^3.0.2",
+    "turndown": "^5.0.1"
   },
   "scripts": {
     "start": "react-wp-scripts start",
