Use static filename for Travis
This should allow bundlesize to compare sizes across branches better.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "bundlesize": [
     {
-      "path": "./build/static/js/main.*.js"
+      "path": "./build/static/js/main.js"
     }
   ]
 }
