--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ node_js:
 script:
   - npm run lint
   - npm run build
+
+  # Move main JS file to a static name
+  - cp $(find ./build/static/js -name 'main.*.js') ./build/static/js/main.js
   - npm run check-size
