--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "homepage": ".",
   "devDependencies": {
-    "@storybook/react": "^3.4.10",
+    "@storybook/react": "^5.1.10",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^8.0.6",
     "bundlesize": "^0.17.0",
     "eslint": "^4.19.1",
     "eslint-config-humanmade": "^0.5.0",
