Add Redux helper

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@storybook/react": "^5.1.10",
+    "addon-redux": "^1.0.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^8.0.6",
     "bundlesize": "^0.17.0",
