--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@humanmade/repress": "^0.5.0",
     "@iarna/word-count": "^1.0.3",
+    "@sentry/browser": "^5.9.1",
     "@storybook/addon-actions": "^5.2.0",
     "emoji-mart": "^2.11.1",
     "interweave": "^11.1.0",
