Use npm audit to fix package warnings
upgrades marked across semver breaking boundary.

--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "@storybook/addon-viewport": "^5.2.0",
     "@storybook/react": "^5.2.0",
     "addon-redux": "^1.0.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "bundlesize": "^0.17.0",
-    "eslint": "^4.19.1",
-    "eslint-config-humanmade": "^0.5.0",
+    "eslint": "6",
+    "eslint-config-humanmade": "^0.8.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
     "outdent": "^0.7.0",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^1.0.5"
   },
   "dependencies": {
     "@humanmade/react-tasklist": "^0.0.4",
@@ -31,9 +30,9 @@
     "emoji-mart": "^2.11.1",
     "interweave": "^11.1.0",
     "lodash": "^4.17.13",
-    "marked": "^0.3.6",
+    "marked": "^1.1.0",
     "mousetrap": "^1.6.2",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-content-loader": "^2.0.2",
     "react-dom": "^16.9.0",
