Prevent eslint from re-introducing comma-dangle for function args
This is tied to some dependency, we should address it at the level
of our main coding standards repo eventually.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,2 +1,10 @@
 extends:
   - humanmade
+rules:
+  comma-dangle:
+  - error
+  - arrays: always-multiline
+    objects: always-multiline
+    imports: always-multiline
+    exports: always-multiline
+    functions: never
