--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "emoji-mart": "^2.11.1",
     "interweave": "^11.1.0",
     "lodash": "^4.17.13",
-    "marked": "^1.1.0",
+    "marked": "0.3.19",
     "mousetrap": "^1.6.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
