--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "homepage": ".",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@humanmade/eslint-config": "^1.1.3",
     "@storybook/addon-backgrounds": "^5.2.0",
     "@storybook/addon-viewport": "^5.2.0",
     "@storybook/react": "^5.2.0",
     "addon-redux": "^1.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.17.0",
-    "eslint": "^5.16.0",
-    "eslint-config-humanmade": "^0.8.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^5",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint": "^7.26.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jsdoc": "^29.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "outdent": "^0.7.0",
     "react-scripts": "^1.1.5"
   },
