eslint src/ --fix

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,3 +8,7 @@ rules:
     imports: always-multiline
     exports: always-multiline
     functions: never
+  jsdoc/require-jsdoc:
+  - off
+  react/jsx-sort-props:
+  - off
