--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bundlesize": "^0.17.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^3.0.8",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsdoc": "^29.2.0",
