--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/with-api-data"]
 	path = src/with-api-data
-	url = git@github.com:joehoyle/with-api-data.git
+	url = https://github.com/joehoyle/with-api-data.git
