--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "devDependencies": {
     "@humanmade/eslint-config": "^1.1.3",
-    "@humanmade/webpack-helpers": "^1.0.0-beta.4",
+    "@humanmade/webpack-helpers": "^1.0.0-beta.5",
     "@storybook/addon-backgrounds": "^5.2.0",
     "@storybook/addon-viewport": "^5.2.0",
     "@storybook/react": "^5.2.0",
@@ -60,7 +60,7 @@
     "turndown": "^5.0.1"
   },
   "scripts": {
-    "start": "react-wp-scripts start",
+    "start": "webpack serve --config=.config/webpack.config.dev.js",
     "build": "webpack --config=.config/webpack.config.prod.js",
     "lint": "eslint src/",
     "test": "react-scripts test --env=jsdom",
