--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^2.4.3",
     "react-side-effect": "^1.1.5",
     "react-slot-fill": "^2.0.0",
     "react-transition-group": "^2.4.0",
