--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "emoji-mart": "^2.11.1",
     "interweave": "^11.1.0",
     "lodash": "^4.17.19",
-    "marked": "0.3.19",
+    "marked": "^4.0.16",
     "mousetrap": "^1.6.2",
     "postcss": "^8.4.14",
     "prop-types": "^15.7.2",
