--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules
+vendor
 
 # testing
 coverage
@@ -14,7 +15,6 @@ build
 .AppleDouble
 .LSOverride
 .env
-npm-debug.log
 
 # Thumbnails
 ._*
@@ -22,6 +22,7 @@ npm-debug.log
 # Logs
 logs
 *.log
+npm-debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
