--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@storybook/addon-backgrounds": "^5.2.0",
     "@storybook/addon-viewport": "^5.2.0",
     "@storybook/react": "^5.2.0",
+    "@wordpress/env": "^8.0.0",
     "addon-redux": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "bundlesize": "^0.18.1",
@@ -69,7 +70,13 @@
     "storybook": "start-storybook -p 9009 -s public",
     "storybook:build": "build-storybook -s public",
     "storybook:deploy": "npm run storybook:build && aws s3 sync ./storybook-static s3://make.hmn.md/h2-storybook --acl public-read",
-    "check-size": "bundlesize"
+    "check-size": "bundlesize",
+    "wp-env": "wp-env",
+    "wp-env:start": "wp-env start",
+    "wp-env:stop": "wp-env stop",
+    "wp-env:destroy": "wp-env destroy",
+    "wp-env:logs": "wp-env logs",
+    "wp-env:cli": "wp-env run cli wp"
   },
   "bundlesize": [
     {
